# yanigs

./: .editorconfig  .gitignore  init.sh  pyproject.toml  requirements-app.in  requirements-dev.in  requirements.in  settings.toml
yanigs/: __main__.py
yanigs/config/: __init__.py  __main__.py  example.secrets.toml  settings.toml
