[project]
name = "yanigs"
description = "Yet Another"
authors = [
  {name = "Paodelonga", email = "paodelonga@proton.me"}
]
requires-python = ">=3.9.2"
# license = {text = "LICENSE"}
# dynamic = ["version", "readme", "dependencies"]

[project.urls]
Homepage = "https://www.github.com/paodelonga/yanigs"
Source = "https://www.github.com/paodelonga/yanigs"

[project.optional-dependencies]
dev = [
  "bpython",
  "pip",
  "pylint",
  "python-lsp-server",
  "yapf",
  "py-test",
]
app = [
  "dynaconf",
  "instabot",
]

[tool.yapf]
based_on_style = "google"
ALIGN_CLOSING_BRACKET_WITH_VISUAL_INDENT = true
ALLOW_MULTILINE_DICTIONARY_KEYS = false
ARITHMETIC_PRECEDENCE_INDICATION = true
BLANK_LINES_AROUND_TOP_LEVEL_DEFINITION = 1
BLANK_LINES_BETWEEN_TOP_LEVEL_IMPORTS_AND_VARIABLES = 2
BLANK_LINE_BEFORE_CLASS_DOCSTRING = false
BLANK_LINE_BEFORE_MODULE_DOCSTRING = false
DEDENT_CLOSING_BRACKETS = true
COALESCE_BRACKETS = true
# DISABLE_SPLIT_LIST_WITH_COMMENT = true
EACH_DICT_ENTRY_ON_SEPARATE_LINE = false
DISABLE_ENDING_COMMA_HEURISTIC = false
SPACES_AROUND_DEFAULT_OR_NAMED_ASSIGN = false
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
SPACES_AROUND_DICT_DELIMITERS = false
SPACES_AROUND_LIST_DELIMITERS = false
SPACES_AROUND_POWER_OPERATOR = true
SPACES_AROUND_SUBSCRIPT_COLON = false
SPACES_AROUND_TUPLE_DELIMITERS = false
SPACES_BEFORE_COMMENT = 1
SPLIT_ALL_COMMA_SEPARATED_VALUES = false
SPLIT_ALL_TOP_LEVEL_COMMA_SEPARATED_VALUES = false
SPLIT_ARGUMENTS_WHEN_COMMA_TERMINATED = false
SPLIT_BEFORE_ARITHMETIC_OPERATOR = false
SPLIT_BEFORE_BITWISE_OPERATOR = false
SPLIT_BEFORE_DICT_SET_GENERATOR = true
SPLIT_BEFORE_DOT = true
SPLIT_COMPLEX_COMPREHENSION = true
USE_TABS = false
COLUMN_LIMIT = 90

[tool.black]
color = true
line-length = 90

[tool.pylint.basic]
good-names = ["Run", "_"]

[tool.pylint.design]
max-args = 6

[tool.pylint.format]
max-line-length = 75

[tool.pylint.logging]
logging-format-style = "new"

[tool.pylint."messages control"]
confidence = [
  "HIGH",
  "CONTROL_FLOW",
  "INFERENCE",
  "INFERENCE_FAILURE",
  "UNDEFINED"
]
disable = ["raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "use-implicit-booleaness-not-comparison-to-string",
  "use-implicit-booleaness-not-comparison-to-zero",
  "C0103"
]

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX", "TODO", "WIP", "NOTE", "TIP", "WARN"]

[tool.pylint.similarities]
ignore-imports = false

[tool.pylint.variables]
allow-global-unused-variables = false

